objects/AcctSeed__Project__c.object
<CustomObject>
    <fields>
        <fullName>CD_IFR_Reached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marked true via Field Update when the first associated Site reaches CD IFR stage. Used by process to trigger creation of standard set of material Submittals for the Project.</description>
        <label>CD IFR Reached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CD_Set_DWG_Link__c</fullName>
        <label>CD Set DWG Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CD_Set_PDF_Link__c</fullName>
        <inlineHelpText>Link to PDF version of CD IFR set</inlineHelpText>
        <label>CD IFR PDF Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CD_on_time__c</fullName>
        <formula>IF(ISBLANK(Const_Set_Completed__c ) &amp;&amp; (CD_Baseline_Date__c &lt; TODAY()),0, 
IF(Const_Set_Completed__c &lt;= CD_Baseline_Date__c &amp;&amp; CD_Baseline_Date__c &gt; DATE(2012,08,01),1, 
IF(ISBLANK(Const_Set_Completed__c ) || ISBLANK(CD_Baseline_Date__c ),Null,0)))</formula>
        <label>CD on time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CS_Date_stamp_from_Site__c</fullName>
        <label>CS Date stamp from Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Cond_HO_to_Mob__c</fullName>
        <description>Used for Calendar to determine if the Project is in HO to Mob stage</description>
        <formula>AND( TODAY() &gt;=  Hand_off_Date__c   ,TODAY() &lt;=SFDC_Project_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HO to Mob</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_Cond_Mob_to_Sub__c</fullName>
        <formula>AND( TODAY() &gt;= SFDC_Project_Start_Date__c  ,TODAY() &lt;= SFDC_Project_End_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mob to Sub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calendar_Cond_Sub_to_PTO__c</fullName>
        <formula>AND
( TODAY() &lt;=  Site_PTO_Date__c  ,
   TODAY() &gt;= SFDC_Project_Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub to PTO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_ahead_notice__c</fullName>
        <label>Call ahead notice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Can_Borrego_set_up_their_own_alerts__c</fullName>
        <description>Part of O&amp;M Site Information Form</description>
        <inlineHelpText>Does Borrego have the functionality to edit the frequency of alerts per alert type?</inlineHelpText>
        <label>Can Borrego set up their own alerts?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cash_Receipts_Remaining__c</fullName>
        <formula>Current_Contract_Price_WIP__c  -  EPC_Payment_Received__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract Price WIP - Payment Received</inlineHelpText>
        <label>Cash Receipts Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Required_to_Complete_Job__c</fullName>
        <description>Sum of Budget Line Items minus Posted Accounts Payable lines</description>
        <formula>Roll_Up_Budget_Line_Items__c -  Roll_Up_Account_Payable_Line_Amount__c   - (Roll_Up_Project_Tasks_with_Category_OH__c- Service_Costs__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Budgeted Expense- Dollars Paid- (Cat OH Budgeted-Service Costs)</inlineHelpText>
        <label>Cash Required to Complete Job</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cat_OH_Allocated__c</fullName>
        <formula>VALUE(CASE(OH_Allocation_Status__c, 
&quot;Contract Signed&quot;, &quot;.25&quot;, 
&quot;Permit Approved&quot;, &quot;.50&quot;, 
&quot;In Progress&quot;, &quot;.75&quot;, 
&quot;Final Completion&quot;, &quot;1&quot;,
&quot;.25&quot;)) *  Total_Indirects_Budgeted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OH Allocation amount- based on OH Allocation Status: Contract Signed= 25%, Permit Approved = 50%, In Progress = 75%, Final Comploetion = 1</inlineHelpText>
        <label>Cat OH Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cat_OH_Budgeted2__c</fullName>
        <description>Cat OH Budgeted - Service Costs
Takes Service out of the OH bucket</description>
        <formula>Roll_Up_Project_Tasks_with_Category_OH__c - Service_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sums all Budget Line Items with Category OH</inlineHelpText>
        <label>Cat OH Budgeted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cd_Count__c</fullName>
        <formula>IF(ISBLANK( CD_on_time__c ) || (CD_on_time__c &gt;= 0 &amp;&amp; CD_Baseline_Date__c &lt; DATE(2012,08,01)) ,NULL,1)</formula>
        <label>Cd Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_In_Margin__c</fullName>
        <label>Change In Margin</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Order</label>
        <referenceTo>Con_Req__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>ChangeOrder</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist_Status__c</fullName>
        <inlineHelpText>Use this field to show the status of the Project Control checklist.</inlineHelpText>
        <label>Checklist Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Premobilization Checklist has open items</fullName>
                </value>
                <value>
                    <fullName>In Progress Audit has occurred</fullName>
                </value>
                <value>
                    <fullName>Closeout Checklist has open items</fullName>
                </value>
                <value>
                    <fullName>Closeout checklist closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Business_License_Expiration_Date__c</fullName>
        <label>City Business License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City_Business_License_N__c</fullName>
        <label>City Business License #</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Costs__c</fullName>
        <description>Sum of Budgeted Expense for Civil Other and Civil Engineering</description>
        <label>Civil Costs</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>equals</operation>
            <value>Site Improvements, Road Work / Hardscape, Civil Other, Add/Alt Site Improvements</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Civil_Engineer__c</fullName>
        <inlineHelpText>Internal or External Civil Engineer associated with the project</inlineHelpText>
        <label>Civil Engineer</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Engineering_Cost__c</fullName>
        <description>Rollup of Budgeted Expense from the Civil Engineering Line Item</description>
        <label>Civil Engineering Cost</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>equals</operation>
            <value>Civil Engineering</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Civil_Entitlement_Feasibility__c</fullName>
        <formula>&quot;Civil Entitlement/Feasibility&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Civil Entitlement/Feasibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Management_Notes__c</fullName>
        <inlineHelpText>Template:
Slope analysis 1 days
Layout 1 days
Delineation
Survey 7 days
Layout 3 days
Send to civil sub 3 days
Borrego review 4 weeks
Submittal date 3 days</inlineHelpText>
        <label>Civil Management Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <formula>AcctSeed__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Notice to Proceeed (Close Date from the Opportunity)</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closeout_Document__c</fullName>
        <inlineHelpText>Link to Closeout Documentation- for Customer Portal</inlineHelpText>
        <label>System Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Combined_Set__c</fullName>
        <formula>IF(X50_Set_Completed__c =  Permit_Set_Completed__c, &quot;50/Permit&quot;,
IF( Permit_Set_Completed__c =  Const_Set_Completed__c , &quot;Permit/CD&quot;,
IF(X50_Set_Completed__c = Const_Set_Completed__c, &quot;50/CD&quot;,
null)))</formula>
        <inlineHelpText>determines if sets are being shared</inlineHelpText>
        <label>Combined Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combo_Lock__c</fullName>
        <label>Combo Lock #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments_on_Budget__c</fullName>
        <inlineHelpText>Historical comments on margin changes</inlineHelpText>
        <label>Margin Change Explanation</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments_on_Schedule__c</fullName>
        <inlineHelpText>Comments on current schedule- used for Project Status Report</inlineHelpText>
        <label>Comments on Schedule</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommissionOverride__c</fullName>
        <description>override commission formula</description>
        <label>Commission Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <formula>IF (UseCommissionOverride__c=TRUE , CommissionOverride__c,
IF((AcctSeed__Opportunity__r.Total_Commission__c)&lt;1, ((Original_Contract_Price__c *1.8)/100),
 AcctSeed__Opportunity__r.Total_Commission__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commissioning_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Contact who commissioned the system</inlineHelpText>
        <label>Commissioning Agent</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <description>Date of system Commissioning</description>
        <inlineHelpText>Date of system Commissioning</inlineHelpText>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status_Notes__c</fullName>
        <label>Commissioning Status Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commissioning_Status__c</fullName>
        <label>Pre-Operational Commissioning Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted to QA</fullName>
                </value>
                <value>
                    <fullName>First Stage Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Completion</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Corrective Action Required</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_By_Borrego__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By - Borrego</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectsTiSm</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_By_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by Site trigger</description>
        <label>Completed By Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects (Completed By Customer)</relationshipLabel>
        <relationshipName>Projects5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_1_Actual__c</fullName>
        <label>Concom Meeting 1 Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_1_Forecast_TEXT__c</fullName>
        <formula>&quot;Concom Meeting 1 Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concom Meeting 1 Forecast-TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_1_Forecast__c</fullName>
        <label>Concom Meeting 1 Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_2_Actual__c</fullName>
        <label>Concom Meeting 2 Actual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_2_Forecast_TEXT__c</fullName>
        <formula>&quot;Concom Meeting 2 Forecast&quot;&amp; &quot;-&quot; &amp; Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Concom Meeting 2 Forecast-TEXT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concom_Meeting_2_Forecast__c</fullName>
        <label>Concom Meeting 2 Forecast</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cons_Stage_90_Completed_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used in conjunction with validation rule, need to confirm this stage has been reached to ensure creation of assets</inlineHelpText>
        <label>Cons Stage 90% Completed Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Const_Review_Baseline__c</fullName>
        <label>Const Review Baseline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Const_Review_Date__c</fullName>
        <label>Const Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Const_Set_Completed__c</fullName>
        <inlineHelpText>Date Construction Set IFR Complete</inlineHelpText>
        <label>CD IFR Set</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Construction_Stage_Change_Date__c</fullName>
        <label>Construction Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contingent_Upon_Commencement__c</fullName>
        <label>Contingent Upon Commencement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Price_Revenue__c</fullName>
        <formula>Final_Contract_PriceProject__c - AcctSeed__Budgeted_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the difference between the Contract Price and Billing Line Items entered- to show discrepancies</inlineHelpText>
        <label>Contract Price - Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Price_at_Budget_Lock__c</fullName>
        <inlineHelpText>Only used for PM Margin Calculation</inlineHelpText>
        <label>Contract Price at Budget Lock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Profit__c</fullName>
        <description>Accumulated Revenue - Accumulated Direct Cost</description>
        <formula>( Accumulated_Revenue__c - ( Accumulated_Direct_Cost__c +  Accrued_Direct_Cost__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accumulated Revenue- (Accumulated Direct Cost + Accrued Direct Cost)</inlineHelpText>
        <label>Contract Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Sign_to_PTO__c</fullName>
        <formula>Site_PTO_Date__c -  Contract_Signed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates days between Contract Signed Date and Site PTO Date.  If more than one Site, the FIRST PTO date is pulled in.</inlineHelpText>
        <label>Contract Sign to PTO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Signed__c</fullName>
        <formula>AcctSeed__Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>EPC Signed, closed date from the related Opportunity.</inlineHelpText>
        <label>Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_to_Permit_Set_Completed__c</fullName>
        <formula>(Permit_Set_Completed__c -  Contract_Signed__c)/7 *5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Signed to Permit Set Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract</relationshipLabel>
        <relationshipName>Contract</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin__c</fullName>
        <description>Used for reporting only.</description>
        <formula>Contribution_Profit__c / Final_Contract_PriceProject__c</formula>
        <label>Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contribution_Profit__c</fullName>
        <description>Used for reporting only.</description>
        <formula>Margin_Active__c * ( Final_Contract_PriceProject__c -  (Roll_Up_Budget_Line_Items__c- Total_Indirects_Budgeted__c))</formula>
        <label>Contribution Profit $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Kwh__c</fullName>
        <formula>Total_Direct_Costs_NUA__c / Total_MWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost/Kwh</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_MWh__c</fullName>
        <formula>Project_EPC_Costs__c  / Total_MWh__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost/MWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_at_Completion2__c</fullName>
        <formula>AcctSeed__Budgeted_Amount__c  - Commission_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of all Budget Line Items &quot;Budgeted Expense&quot; (not SGA)-Commission Amount
Used on WIP Report</inlineHelpText>
        <label>Cost at Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_by_Earnings_in_Excess__c</fullName>
        <description>Accumulated Revenue - To-Date Billed</description>
        <formula>Accumulated_Revenue__c -  Roll_Up_Billed_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accumulated Revenue - To-Date Billed</inlineHelpText>
        <label>Cost / (Earnings) in Excess</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Create_Assets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by trigger ptoReceived.  If set, OK to create asset records.</description>
        <label>Create Assets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_of_1st_PSD_Revision__c</fullName>
        <description>Carries over created date from 1st PreSales Design Revision</description>
        <formula>IF( DATEVALUE(AcctSeed__Opportunity__r.Date_of_1st_L1__c)=DATE(2013,06,07),DATEVALUE(AcctSeed__Opportunity__r.Date_PSD_Created__c),DATEVALUE(AcctSeed__Opportunity__r.Date_of_1st_L1__c ))</formula>
        <inlineHelpText>Carries over created date from 1st PreSales Design Revision</inlineHelpText>
        <label>L1 Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_CD_Set__c</fullName>
        <inlineHelpText>Link to the current Construction Set pdf</inlineHelpText>
        <label>Current CD Set</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Cash_Position__c</fullName>
        <description>Sum of Cash Receipts minus Posted Accounts Payable Amounts</description>
        <formula>EPC_Payment_Received__c   -  Roll_Up_Account_Payable_Line_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Payment Received- Dollars Paid</inlineHelpText>
        <label>Current Cash Position</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Price_WIP__c</fullName>
        <formula>AcctSeed__Budgeted_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of Amount field on Billing Line Items
Entered by Accounting</inlineHelpText>
        <label>Current Contract Price-WIP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Lead_Time__c</fullName>
        <formula>IF(OR(ISPICKVAL( Overall_Project_Status__c ,&quot;Dead&quot;), ISPICKVAL( Overall_Project_Status__c ,&quot;Completed&quot;), ISPICKVAL( Overall_Project_Status__c ,&quot;Construction Complete&quot;), ISPICKVAL( Overall_Project_Status__c ,&quot;Complete&quot;)),  Days_Since_1st_L1__c ,  TODAY() -  AcctSeed__Opportunity__r.L1_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Project_System_Size2__c</fullName>
        <formula>AcctSeed__Opportunity__r.Project_System_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Current System Size- based on products on the Opportunity</inlineHelpText>
        <label>Current Project System Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomerPortalSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to flag which projects are synced to the customer portal</description>
        <inlineHelpText>used to flag which projects are synced to the customer portal</inlineHelpText>
        <label>Customer Portal Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Billing_Retainage_Amount__c</fullName>
        <label>Customer Billing Retainage Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Name__c</fullName>
        <description>used to help clean up project name for O&amp;M projects to they appear without - O&amp;M on portal, also to be used with accounting invoices.</description>
        <formula>LEFT(Name, LEN(Name) - 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to help clean up project name for O&amp;M projects to they appear without - O&amp;M on portal, also to be used with accounting invoices.</inlineHelpText>
        <label>Customer Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Satisfaction</label>
        <referenceTo>Customer_Satisfaction__c</referenceTo>
        <relationshipLabel>Customer Satisfaction</relationshipLabel>
        <relationshipName>CustomerSatisfaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAS_Administrator_Email__c</fullName>
        <description>Email of point of contact at the DAS company, typically an Account Manager</description>
        <inlineHelpText>Email of point of contact at the DAS company, typically an Account Manager</inlineHelpText>
        <label>DAS Administrator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DAS_Administrator_Name__c</fullName>
        <description>Point of contact at the DAS company, typically an Account Manager, usually uploaded from template</description>
        <inlineHelpText>Point of contact at the DAS company, typically an Account Manager</inlineHelpText>
        <label>DAS Administrator Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DAS_Administrator_Phone__c</fullName>
        <description>Phone number of point of contact at the DAS company, typically an Account Manager</description>
        <inlineHelpText>Phone number of point of contact at the DAS company, typically an Account Manager</inlineHelpText>
        <label>DAS Administrator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DAS_Connection_to_Internet__c</fullName>
        <description>Part of O&amp;M Site Information form.</description>
        <inlineHelpText>How is the DAS communicating - cell modem or land line?</inlineHelpText>
        <label>DAS Connection to Internet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Modem</fullName>
                </value>
                <value>
                    <fullName>LAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAS_Labor_Costs__c</fullName>
        <description>Roll up sum of DAS - Labor</description>
        <label>DAS - Labor Costs</label>
        <summarizedField>AcctSeed__Project_Task__c.AcctSeed__Budgeted_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>AcctSeed__Project_Task__c.Name</field>
            <operation>equals</operation>
            <value>DAS - Labor</value>
        </summaryFilterItems>
        <summaryForeignKey>AcctSeed__Project_Task__c.AcctSeed__Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DAS_Login_Notes__c</fullName>
        <description>Used by SPG group to QA DAS platform on new projects.</description>
        <inlineHelpText>Used by SPG group to QA DAS platform on new projects.</inlineHelpText>
        <label>DAS Login Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAS_Platform_Site_ID__c</fullName>
        <description>site id provided by powertrack to identify their associated Site, pulls from EPC Site if there is one, if not should be populated by SPG or O&amp;M</description>
        <inlineHelpText>site id provided by powertrack to identify their associated Site, pulls from EPC Site if there is one, if not should be populated by SPG or O&amp;M</inlineHelpText>
        <label>DAS Platform Site ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAS_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DAS Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (DAS Provider)</relationshipLabel>
        <relationshipName>Projects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DAS_Site_Name__c</fullName>
        <label>DAS Site Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAS_Vendor__c</fullName>
        <label>DAS Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Also Energy</fullName>
                </value>
                <value>
                    <fullName>Aurora Vision</fullName>
                </value>
                <value>
                    <fullName>Deck</fullName>
                </value>
                <value>
                    <fullName>Draker</fullName>
                </value>
                <value>
                    <fullName>Enphase</fullName>
                </value>
                <value>
                    <fullName>Locus Energy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Power Dash</fullName>
                </value>
                <value>
                    <fullName>Solectria</fullName>
                </value>
                <value>
                    <fullName>SunEdison</fullName>
                </value>
                <value>
                    <fullName>SunnyPortal</fullName>
                </value>
                <value>
                    <fullName>Trimark</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DAS_access_for_Borrego_been_requested__c</fullName>
        <description>Can the SPG group and applicable Regional Manager view this site in the applicable DAS Platform?</description>
        <inlineHelpText>Can the SPG group and applicable Regional Manager view this site in the applicable DAS Platform?</inlineHelpText>
        <label>DAS access for Borrego been requested?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DM_Variance__c</fullName>
        <formula>IMAGE(
    &quot;https://chart.googleapis.com/chart?chst=d_text_outline&amp;&quot; + 
    IF(
        Direct_Margin__c  -  Previous_DM__c &lt; 0,
        &quot;chld=FF0000|24|l|FFFFFF|_|&quot;,
        &quot;chld=00FF00|24|l|FFFFFF|_|&quot;
    ) + 
    TEXT(ROUND( (Direct_Margin__c  -  Previous_DM__c) * 100,2)),

    TEXT(ROUND((Direct_Margin__c  -  Previous_DM__c)* 100,2))
)</formula>
        <inlineHelpText>calculates difference between prior month and current month direct margin</inlineHelpText>
        <label>DM Variance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Change_Explanation__c</fullName>
        <inlineHelpText>Explanation as to why the Mobilization Date or PTO Date was changed. Required when changing either of these dates.</inlineHelpText>
        <label>Date Change Explanation</label>
        <type>TextArea</type>
    </fields>
</CustomObject>